# travelAssistant

./: .gitignore  demo_frontend.py  docker-compose.yml  dump.rdb  readme.md
.github/workflows/: docker-image.yml
backend/: .env.exmple  Dockerfile  alembic.ini  demo_frontend.py  pyproject.toml  requirements.txt  travel_agent.py
backend/agents/: dining_agent.py  flight_agent.py  hotel_agent.py  itinerary_agent.py  validate_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 42b865715a52_update_tables.py  a4b50399d556_initial_migration.py
backend/api/: create_user.py  health_check.py  main.py  plan.py  users.py
backend/config/: llm_models.py  redis_db.py
backend/core/: db.py  security.py  setting.py
backend/graph/: TravelAgent.py
backend/models/: dining_model.py  flight_model.py  hotel_model.py  itinerary_model.py  travel_model.py
backend/services/: redis_services.py
backend/test/: health_test.py
backend/tools/: hotel_tools.py
