[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "pyjwt",
    "langgraph",
    "langchain",
    "langchain-openai",
    "passlib[bcrypt]",
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy",
    "psycopg2-binary",
    "python-multipart",
    "redis>=6.4.0",
]
